[package]
name = "Kernel32_PEB"
version = "0.1.0"
edition = "2024"

[dependencies]



[profile.dev]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
# Rustflags  are defined inside .cargo\config.toml